--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
-<html> 
-  <head>
-    <title>Hello World</title> 
-  </head>
+<!DOCTYPE html>
+<html>
+<head>
+    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+<title>Tito was here!</title>
+</head>
+<body>
 
-  <body> 
-    <h1>Hello World</h1> 
-  </body>
+    <h1>Jorge Garcia</h1>
+    <p>I'm learning to code on Codecademy! My goals include:</p>
+    <ul>
+      <li>Learn to code</li>
+      <li>Start a company</li>
+      <li>Help the world</li>
+    </ul>
+    <p>This is one of my favorite websites: <a href="https://www.google.com/" target="_blank">Google</a></p>
+
+</body>
 </html>
