--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 <body>
 
     <h1>Jorge Garcia</h1>
-    <p>I'm learning to code on Codecademy! My goals include:</p>
+    <p>Hi Fwelve! My goals include:</p>
     <ul>
       <li>Learn to code</li>
-      <li>Start a company</li>
-      <li>Help the world</li>
+      <li>Saying hi to Fwelve!</li>
     </ul>
     <p>This is one of my favorite websites: <a href="https://www.google.com/" target="_blank">Google</a></p>
 
